; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_gcm.c_cf_gcm_encrypt.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/src/extr_gcm.c_cf_gcm_encrypt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cf_gcm_encrypt(i32* %0, i8* %1, i32* %2, i64 %3, i32* %4, i64 %5, i32* %6, i64 %7, i32* %8, i32* %9, i64 %10) #0 {
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i64, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i64, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i64, align 8
  %20 = alloca i32*, align 8
  %21 = alloca i32*, align 8
  %22 = alloca i64, align 8
  %23 = alloca i32, align 4
  store i32* %0, i32** %12, align 8
  store i8* %1, i8** %13, align 8
  store i32* %2, i32** %14, align 8
  store i64 %3, i64* %15, align 8
  store i32* %4, i32** %16, align 8
  store i64 %5, i64* %17, align 8
  store i32* %6, i32** %18, align 8
  store i64 %7, i64* %19, align 8
  store i32* %8, i32** %20, align 8
  store i32* %9, i32** %21, align 8
  store i64 %10, i64* %22, align 8
  %24 = load i32*, i32** %12, align 8
  %25 = load i8*, i8** %13, align 8
  %26 = load i32*, i32** %16, align 8
  %27 = load i64, i64* %17, align 8
  %28 = load i32*, i32** %18, align 8
  %29 = load i64, i64* %19, align 8
  %30 = call i32 @cf_gcm_encrypt_init(i32* %24, i8* %25, i32* %23, i32* %26, i64 %27, i32* %28, i64 %29)
  %31 = load i32*, i32** %14, align 8
  %32 = load i64, i64* %15, align 8
  %33 = load i32*, i32** %20, align 8
  %34 = call i32 @cf_gcm_encrypt_update(i32* %23, i32* %31, i64 %32, i32* %33)
  %35 = load i32*, i32** %21, align 8
  %36 = load i64, i64* %22, align 8
  %37 = call i32 @cf_gcm_encrypt_final(i32* %23, i32* %35, i64 %36)
  ret void
}

declare dso_local i32 @cf_gcm_encrypt_init(i32*, i8*, i32*, i32*, i64, i32*, i64) #1

declare dso_local i32 @cf_gcm_encrypt_update(i32*, i32*, i64, i32*) #1

declare dso_local i32 @cf_gcm_encrypt_final(i32*, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
